# whattsanddrops

./: .gitignore  Dockerfile  README.md  bot.py  pyproject.toml  render.yaml
.codex/: setup.sh
.github/workflows/: build-and-deploy.yml
n8n/: .env.example  README.md  docker-compose.yml
n8n/workflows/: telegram-recent-messages.json
tests/: test_basic.py
whattsanddrops/: main.py
